# dayz-api

./: INTEGRATION_NODE_TR.md  README.md  README_FIX_TR.md  README_TR.md
@ApiBridge/: meta.cpp  mod.cpp
@ApiBridge/Addons/: ApiBridge.pbo  README.txt
@ApiBridge/Addons/ApiBridge/: config.cpp
@ApiBridge/Addons/ApiBridge/scripts/3_Game/ApiBridge/: ApiBridgeModels.c  apibridgeconfig.c  apibridgetypes.c
@ApiBridge/ApiBridge/: config.cpp  mod.cpp
@ApiBridge/ApiBridge/scripts/3_Game/ApiBridge/: ApiBridgeConfig.c  ApiBridgeModels.c
@ApiBridge/ApiBridge/scripts/4_World/ApiBridge/: ApiBridgeCommandProcessor.c  ApiBridgeService.c  ApiBridgeStateCollector.c
@ApiBridge/ApiBridge/scripts/5_Mission/ApiBridge/: ApiBridgeMissionServer.c
ApiBridge/: config.cpp  mod.cpp
ApiBridge/Scripts/: config.cpp
ApiBridge/Scripts/3_Game/ApiBridge/: ApiBridgeCommands.c  ApiBridgeConst.c  ApiBridgeIO.c  ApiBridgeState.c
ApiBridge/Scripts/5_Mission/ApiBridge/: ApiBridgeServer.c
ApiBridge/scripts/3_Game/apibridge/: ApiBridgeConfig.c  ApiBridgeConstants.c  ApiBridgeLinkModels.c  ApiBridgeModels.c
ApiBridge/scripts/4_World/apibridge/: ApiBridgeCommandProcessor.c  ApiBridgeFile.c  ApiBridgeService.c  ApiBridgeStateCollector.c
ApiBridge/scripts/5_Mission/apibridge/: ApiBridgeMissionServer.c
Extension/ApiBridgeExtension/: CMakeLists.txt  README_BUILD_TR.md
Extension/ApiBridgeExtension/src/: ApiBridgeExtension.cpp  http_server.h
examples/: commands_inventory.json  commands_teleport.json  node-consumer.js  node_heartbeat.json
(+4 files in other folders)
